fix(table-compare): tooltip icon alignment/spacing

--- a/src/js/components/molecules/icon-button/icon-button.scss
+++ b/src/js/components/molecules/icon-button/icon-button.scss
@@ -131,3 +131,8 @@
         background-color: transparent;
     }
 }
+
+.icon-button--small-icon .icon {
+    font-size: $buildingUnit * 1.5;
+    margin: $buildingUnit * 0.25;
+}
